directory name has been changed - _ -> asset

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Zhengdian Zhan</title>
-	<link rel="stylesheet" type="text/css" href="_/css/style.css">
-	<link rel="stylesheet" type="text/css" href="_/css/animate.min.css">
+	<link rel="stylesheet" type="text/css" href="asset/css/style.css">
+	<link rel="stylesheet" type="text/css" href="asset/css/animate.min.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
 	<meta name="description" content="portfolio website">
 	<meta name="keywords" content="portfolio, resume, web developer, back end developer, front end developer, software developer, zhengdian zhan, masanori sen">
@@ -618,7 +618,7 @@
 	</footer>
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="_/js/script.js"></script>
+	<script src="asset/js/script.js"></script>
 	<script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
