--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<div class="upper-side">
 						<div id="passion" class="circle-box">
 							<i class="fa fa-code"></i>
-							<h3>Passion in technology</h3>
+							<h3>Passion for technology</h3>
 						</div>
 					</div>
 					<i class="fa fa-angle-double-down"></i>
