Google analytics code is added

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 	<header>
 		<h1 hidden>Zhengdian Zhan's homepage</h1>
 		<div class="hero" data-stellar-background-ratio="0.8">
-			<video src="" autoplay loop>
-		  		<!-- <img src="images/misc/building.jpg" alt="Placeholder"> -->
+			<video src="" preload="auto" autoplay loop>
 			</video>
 			<section>
 				<h2 id="main_name" data-stellar-ratio="2">
@@ -122,13 +121,13 @@
 			<span class="profile-picture"></span>
 			<p>
 				<i class="fa fa-quote-left"></i>
-				My name is Zhengdian Zhan, but people call me "Masa". I am a recent graduate, currently seeking employment opportunities.
+				My name is Zhengdian Zhan, but people call me "Masa." I am a recent graduate, currently seeking employment opportunities.
 				<br>
 				<br>
 				I earned my master's degree in information systems technology from George Washington University, and I have been teaching myself a variety of technologies. I have a strong interest in web &amp; software development.
 				<br>
 				<br>
-				If you are interested in me, please feel free to <a href="#contact">contact me</a>.
+				If you are interested in learning more, setting up an interview, or anything else, please feel free to <a href="#contact">contact me</a>.
 				<br>
 				<br>
 				Thank you
@@ -620,7 +619,6 @@
 	</footer>
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="asset/js/script.js"></script>
-	<script src="http://localhost:35729/livereload.js"></script>
+	<script src="asset/js/script.js"></script>	
 </body>
 </html>
