conditional statement for IE is added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 			document.createElement('video');
 			document.createElement("footer");
 			document.createElement("header");
+
+			alert("I am very sorry, but this does not currently work on Internet Explore.")
 		</script>
 	
 	<![endif]-->
