display:block element is added to all the background images for IE

--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
 			document.createElement('video');
 			document.createElement("footer");
 			document.createElement("header");
-
-			alert("I am very sorry, but this does not currently work on Internet Explore.")
 		</script>
 	
 	<![endif]-->
@@ -641,6 +639,7 @@
 
 	</script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="http://localhost:35729/livereload.js"></script>
 	<script src="asset/js/script.js"></script>	
 </body>
 </html>
