New css file (ie.css) is added

--- a/index.html
+++ b/index.html
@@ -13,16 +13,8 @@
 	<meta name="author" content="zhengdian zhan, masanori sen">
 	<!--[if IE]>
    
-	   	<style type="text/css">
-
-		   .color-block { 
-		       background:transparent;
-		       filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#50990000,endColorstr=#50990000); 
-		       zoom: 1;
-		    } 
-
-	    </style>
-		
+		<link rel="stylesheet" type="text/css" href="asset/css/ie.css">
+		  
 		//Create HTML5 elements for IE
 	 	
 	 	<script>
