--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 	<meta name="author" content="zhengdian zhan, masanori sen">
 	<!--[if IE]>
    
-		
+		<link rel="stylesheet" type="text/css" href="asset/css/ie.css">
+		  
+	 	
 	 	<script>
 			document.createElement("article");
 			document.createElement("nav");
@@ -628,7 +630,6 @@
 
 	</script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="http://localhost:35729/livereload.js"></script>
 	<script src="asset/js/script.js"></script>	
 </body>
 </html>
