Icon for iphone image is added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="asset/css/animate.min.css">
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" href="/myIcon.png"/>
 	<meta name="viewport" content="width=device-width, user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
 	<meta name="description" content="portfolio website">
 	<meta name="keywords" content="portfolio, resume, web developer, back end developer, front end developer, software developer, zhengdian zhan, masanori sen">
