--- a/index.html
+++ b/index.html
@@ -615,7 +615,9 @@
 			</div><!-- socialmediaicons -->
 		</section>
 	</div>
-	<div id="disqus_thread"></div>
+	<div class="comment-wrapper">
+		<div id="disqus_thread"></div>
+	</div>
 	<script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'zhengdianzhan'; // required: replace example with your forum shortname
