Now clicking the comment icon on the menu bar will jump to the comment section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 					<li><a href="#education"><h3><i class="fa fa-building-o"></i> EDUCATION</h3></a></li>
 					<li><a href="#work"><h3><i class="fa fa-coffee"></i> WORK</h3></a></li>
 					<li><a href="#contact"><h3><i class="fa fa-envelope"></i> CONTACT</h3></a></li>
+					<li><a href="#comments"><h3><i class="fa fa-comment-o"></i> COMMENT</h3></a></li>
 				</ul>
 			</section>
 		</nav>
@@ -615,7 +616,7 @@
 			</div><!-- socialmediaicons -->
 		</section>
 	</div>
-	<div class="comment-wrapper">
+	<div id="comments">
 		<div id="disqus_thread"></div>
 	</div>
 	<script type="text/javascript">
