Skill set and portfolio sites are updated

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 					<li><a href="#education"><h3><i class="fa fa-building-o"></i> EDUCATION</h3></a></li>
 					<li><a href="#work"><h3><i class="fa fa-coffee"></i> WORK</h3></a></li>
 					<li><a href="#contact"><h3><i class="fa fa-envelope"></i> CONTACT</h3></a></li>
-					<li><a href="#comments"><h3><i class="fa fa-comment-o"></i> COMMENT</h3></a></li>
-					<li><a href="todolist/index.html"><h3><i class="fa fa-comment-o"></i> To Do List</h3></a></li>
+					<!-- <li><a href="#comments"><h3><i class="fa fa-comment-o"></i> COMMENT</h3></a></li> -->
 				</ul>
 			</section>
 		</nav>
@@ -73,14 +72,15 @@
 					<div class="upper-side">
 						<div id="passion" class="circle-box">
 							<i class="fa fa-code"></i>
-							<h3>Passion for technology</h3>
+							<h3>Full Stack Engineer</h3>
 						</div>
 					</div>
 					<i class="fa fa-angle-double-down"></i>
 					<div class="hidden-description">
 						<p>
 							<i class="fa fa-quote-left"></i>
-							I taught myself various programming languages and created websites like this site and <a href="http://modishow.com" target="_blank">ModiShow</a>. I am constantly working to improve my current skills as well as learning new ones.
+							I can develop websites using LAMP stack (<a href="http://modishow.com" target="_blank">ModiShow</a> ) and MEAN stack (<a href="http://polligrid.com" target="_blank">PolliGrid</a> ) development.  
+							I am constantly working to improve my current skills as well as learning new ones.
 							<i class="fa fa-quote-right"></i>
 						</p>
 					</div>
@@ -89,14 +89,14 @@
 					<div class="upper-side">
 						<div id="learner" class="circle-box">
 							<i class="fa fa-bolt"></i>
-							<h3>Quick learner</h3>
+							<h3>Responsive Design</h3>
 						</div>
 					</div>
 					<i class="fa fa-angle-double-down"></i>
 					<div class="hidden-description">
 						<p>
 							<i class="fa fa-quote-left"></i>
-							After graduate school, I spent 5 months teaching myself the tools for full stack web development from scratch in order to build <a href="http://modishow.com" target="_blank">ModiShow</a> 
+							I can create a full responsive web design. The example works are <a href="http://polligrid.com" target="_blank">PolliGrid</a>, <a href="http://masa-chat.jit.su" target="_blank">Chatting Room</a> , <a href="http://zhengdianzhan.com/todolist" target="_blank">To Do Task</a> and this site.
 							<i class="fa fa-quote-right"></i>
 						</p>
 					</div>
@@ -164,6 +164,14 @@
 								<span class="sub-title">Websites created with the technology:</span>
 								<a class="block-attr" href="http://zhengdianzhan.com" target="_blank" rel="">This website
 								</a>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
+								</a>
+								<a class="block-attr" href="http://zhengdianzhan.com/todolist" target="_blank" rel="">To do list
+								</a>
+								<a class="block-attr" href="http://modishow.com" target="_blank" rel="">ModiShow
+								</a>
 							</p>
 						</div>
 					</li>
@@ -178,6 +186,14 @@
 							<p>
 								<span class="sub-title">Websites created with the technology:</span>
 								<a class="block-attr" href="http://zhengdianzhan.com" target="_blank" rel="">This website
+								</a>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
+								</a>
+								<a class="block-attr" href="http://zhengdianzhan.com/todolist" target="_blank" rel="">To do list
+								</a>
+								<a class="block-attr" href="http://modishow.com" target="_blank" rel="">ModiShow
 								</a>
 							</p>
 						</div>
@@ -194,6 +210,12 @@
 								<span class="sub-title">Websites created with the technology:</span>
 								<a class="block-attr" href="http://zhengdianzhan.com" target="_blank" rel="">This website
 								</a>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
+								</a>
+								<a class="block-attr" href="http://zhengdianzhan.com/todolist" target="_blank" rel="">To do list
+								</a>
 							</p>
 						</div>
 					</li>
@@ -209,20 +231,11 @@
 								<span class="sub-title">Websites created with the technology:</span>
 								<a class="block-attr" href="http://zhengdianzhan.com" target="_blank" rel="">This website
 								</a>
-							</p>
-						</div>
-					</li>
-					<li>
-						<h4>Susy</h4>
-						<div class="graph-container">
-							<div id="susy" class="graph-gauge">
-								<span class="familiarity">Familiarity: Strong</span>
-							</div>
-						</div>
-						<div class="hidden-description">
-							<p>
-								<span class="sub-title">Websites created with the technology:</span>
-								<a class="block-attr" href="http://zhengdianzhan.com" target="_blank" rel="">This website
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
+								</a>
+								<a class="block-attr" href="http://zhengdianzhan.com/todolist" target="_blank" rel="">To do list
 								</a>
 							</p>
 						</div>
@@ -231,36 +244,6 @@
 						<h4>Bootstrap</h4>
 						<div class="graph-container">
 							<div id="boostrap" class="graph-gauge">
-								<span class="familiarity">Familiarity: Intermediate</span>
-							</div>
-						</div>
-						<div class="hidden-description">
-							<p>
-								<span class="box-header center">Currently building a web-app with it.</span>
-							</p>
-						</div>
-					</li>
-					<li>
-						<h4>Javascript</h4>
-						<div class="graph-container">
-							<div id="javascript" class="graph-gauge">
-								<span class="familiarity">Familiarity: Intermediate</span>
-							</div>
-						</div>
-						<div class="hidden-description">
-							<p>
-								<span class="sub-title">Websites created with the technology:</span>
-								<a class="block-attr" href="http://zhengdianzhan.com" target="_blank" rel="">This website
-								</a>
-								<a class="block-attr" href="http://modishow.com" target="_blank" rel="">ModiShow
-								</a>
-							</p>
-						</div>
-					</li>
-					<li>
-						<h4>JQuery</h4>
-						<div class="graph-container">
-							<div id="jquery" class="graph-gauge">
 								<span class="familiarity">Familiarity: Strong</span>
 							</div>
 						</div>
@@ -269,7 +252,11 @@
 								<span class="sub-title">Websites created with the technology:</span>
 								<a class="block-attr" href="http://zhengdianzhan.com" target="_blank" rel="">This website
 								</a>
-								<a class="block-attr" href="http://modishow.com" target="_blank" rel="">ModiShow
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
+								</a>
+								<a class="block-attr" href="http://zhengdianzhan.com/todolist" target="_blank" rel="">To do list
 								</a>
 							</p>
 						</div>
@@ -284,9 +271,132 @@
 						<div class="hidden-description">
 							<p>
 								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://modishow.com" target="_blank" rel="">ModiShow
+								</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<h4>Javascript</h4>
+						<div class="graph-container">
+							<div id="javascript" class="graph-gauge">
+								<span class="familiarity">Familiarity: Strong</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Websites created with the technology:</span>
 								<a class="block-attr" href="http://zhengdianzhan.com" target="_blank" rel="">This website
 								</a>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
+								</a>
+								<a class="block-attr" href="http://zhengdianzhan.com/todolist" target="_blank" rel="">To do list
+								</a>
 								<a class="block-attr" href="http://modishow.com" target="_blank" rel="">ModiShow
+								</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<h4>CoffeeScript</h4>
+						<div class="graph-container">
+							<div id="coffee" class="graph-gauge">
+								<span class="familiarity">Familiarity: Strong</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<h4>AngularJS</h4>
+						<div class="graph-container">
+							<div id="angular" class="graph-gauge">
+								<span class="familiarity">Familiarity: Strong</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://zhengdianzhan.com/todolist" target="_blank" rel="">To do list
+								</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<h4>JQuery</h4>
+						<div class="graph-container">
+							<div id="jquery" class="graph-gauge">
+								<span class="familiarity">Familiarity: Strong</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://modishow.com" target="_blank" rel="">ModiShow
+								</a>
+								<a class="block-attr" href="http://zhengdianzhan.com" target="_blank" rel="">This website
+								</a>
+								<a class="block-attr" href="http://zhengdianzhan.com/todolist" target="_blank" rel="">To Do Task
+								</a>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
+								</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<h4>UnderscoreJS</h4>
+						<div class="graph-container">
+							<div id="underscore" class="graph-gauge">
+								<span class="familiarity">Familiarity: Strong</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<h4>RequireJS</h4>
+						<div class="graph-container">
+							<div id="require" class="graph-gauge">
+								<span class="familiarity">Familiarity: Strong</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://polligird.com" target="_blank" rel="">PolliGrid
+								</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<h4>PassportJS</h4>
+						<div class="graph-container">
+							<div id="passport" class="graph-gauge">
+								<span class="familiarity">Familiarity: Strong</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
 								</a>
 							</p>
 						</div>
@@ -296,15 +406,51 @@
 			<div class="column type-a">
 				<ul>
 					<li>
-						<h4>AngularJS</h4>
+						<h4>NodeJS</h4>
 						<div class="graph-container">
-							<div id="angular" class="graph-gauge">
-								<span class="familiarity">Familiarity: Beginner</span>
+							<div id="nodeJs" class="graph-gauge">
+								<span class="familiarity">Familiarity: Strong</span>
 							</div>
 						</div>
 						<div class="hidden-description">
 							<p>
-								<span class="box-header">Currently building a web-app with it.</span>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
+								</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<h4>ExpressJS</h4>
+						<div class="graph-container">
+							<div id="express" class="graph-gauge">
+								<span class="familiarity">Familiarity: Strong</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
+								</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<h4>Web Socket</h4>
+						<div class="graph-container">
+							<div id="socket" class="graph-gauge">
+								<span class="familiarity">Familiarity: Strong</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
+								</a>
 							</p>
 						</div>
 					</li>
@@ -338,19 +484,7 @@
 							</p>
 						</div>
 					</li>
-					<li>
-						<h4>NodeJS</h4>
-						<div class="graph-container">
-							<div id="nodeJs" class="graph-gauge">
-								<span class="familiarity">Familiarity: Beginner</span>
-							</div>
-						</div>
-						<div class="hidden-description">
-							<p>
-								<span class="box-header">Currently building a web-app with it.</span>
-							</p>
-						</div>
-					</li>
+					
 					<li>
 						<h4>MySQL</h4>
 						<div class="graph-container">
@@ -375,7 +509,11 @@
 						</div>
 						<div class="hidden-description">
 							<p>
-								<span class="box-header">Currently building a web-app with it.</span>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
+								</a>
 							</p>
 						</div>
 					</li>
@@ -390,6 +528,57 @@
 							<p>
 								<span class="sub-title">Websites created with the technology:</span>
 								<a class="block-attr" href="http://zhengdianzhan.com" target="_blank" rel="">This website
+								</a>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+								<a class="block-attr" href="http://masa-chat.jit.su" target="_blank" rel="">Chatting Room
+								</a>
+								<a class="block-attr" href="http://zhengdianzhan/todolist" target="_blank" rel="">To Do Task
+								</a>
+							</p>
+						</div>
+					</li>
+
+					<li>
+						<h4>Gulp</h4>
+						<div class="graph-container">
+							<div id="gulp" class="graph-gauge">
+								<span class="familiarity">Familiarity: Strong</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Currently making a site with it:</span>
+								
+							</p>
+						</div>
+					</li>
+					<li>
+						<h4>JasmineJS</h4>
+						<div class="graph-container">
+							<div id="jasmine" class="graph-gauge">
+								<span class="familiarity">Familiarity: Intermediate</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
+								</a>
+							</p>
+						</div>
+					</li>
+					<li>
+						<h4>Modernizr</h4>
+						<div class="graph-container">
+							<div id="modernizr" class="graph-gauge">
+								<span class="familiarity">Familiarity: Strong</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://polligrid.com" target="_blank" rel="">PolliGrid
 								</a>
 							</p>
 						</div>
@@ -494,15 +683,41 @@
 			<h2>Portfolio</h2>
 			<div class="list-of-creations">
 				<div class="creation">
+					<a href="http://polligrid.com" target="_blank">
+						<img class="original" src="images/creations/polligrid-edited.png" alt="modishow">
+						<img class="edited" src="images/creations/polligrid-raw.png" alt="modishow">
+						<div class="popup-slides">
+							<h3>PolliGrid</h3>
+						</div>
+					</a>
+				</div>
+				<div class="creation">
+					<a href="http://masa-chat.jit.su" target="_blank">
+						<img class="original" src="images/creations/chat-edited.png" alt="modishow">
+						<img class="edited" src="images/creations/chat-raw.png" alt="modishow">
+						<div class="popup-slides">
+							<h3>Chatting Room</h3>
+						</div>
+					</a>
+				</div>
+				<div class="creation">
 					<a href="http://modishow.com" target="_blank">
-						<img class="original" src="images/creations/model1-edited.jpg" alt="modishow">
-						<img class="edited" src="images/creations/model1-raw.jpg" alt="modishow">
+						<img class="original" src="images/creations/modishow-edited.png" alt="modishow">
+						<img class="edited" src="images/creations/modishow-raw.png" alt="modishow">
 						<div class="popup-slides">
 							<h3>Modishow</h3>
 						</div>
 					</a>
 				</div>
-
+				<div class="creation">
+					<a href="http://zhengdianzhan.com/todolist" target="_blank">
+						<img class="original" src="images/creations/todo-edited.png" alt="modishow">
+						<img class="edited" src="images/creations/todo-raw.png" alt="modishow">
+						<div class="popup-slides">
+							<h3>To Do Task</h3>
+						</div>
+					</a>
+				</div>
 			</div>
 			<div class="additional-button">
 				<a href="https://github.com/masanorinyo" target="_blank"><i class="fa fa-github"></i> Check out my Github</a>
@@ -617,7 +832,7 @@
 			</div><!-- socialmediaicons -->
 		</section>
 	</div>
-	<div id="comments">
+	<!-- <div id="comments">
 		<div id="disqus_thread"></div>
 	</div>
 	<script type="text/javascript">
@@ -632,7 +847,7 @@
         })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a> -->
 	<footer>
 		<div class="layout">
 			<small class="small">&copy;2014 Zhengdian Zhan</small>
