Edited images were removed

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<div class="hidden-description">
 						<p>
 							<i class="fa fa-quote-left"></i>
-							I can develop websites using LAMP stack (<a href="http://modishow.com" target="_blank">ModiShow</a> ) and MEAN stack (<a href="http://polligrid.com" target="_blank">PolliGrid</a> ) development.  
+							I can develop websites using both the LAMP (<a href="http://modishow.com" target="_blank">ModiShow</a> ) and MEAN (<a href="http://polligrid.com" target="_blank">PolliGrid</a> ) stacks.
 							I am constantly working to improve my current skills as well as learning new ones.
 							<i class="fa fa-quote-right"></i>
 						</p>
@@ -96,7 +96,7 @@
 					<div class="hidden-description">
 						<p>
 							<i class="fa fa-quote-left"></i>
-							I can create a full responsive web design. The example works are <a href="http://polligrid.com" target="_blank">PolliGrid</a>, <a href="http://masa-chat.jit.su" target="_blank">Chatting Room</a> , <a href="http://zhengdianzhan.com/todolist" target="_blank">To Do Task</a> and this site.
+							I can create full responsive web designs. Examples of my work are <a href="http://polligrid.com" target="_blank">PolliGrid</a>, <a href="http://masa-chat.jit.su" target="_blank">Chatting Room</a> , <a href="http://zhengdianzhan.com/todolist" target="_blank">To Do Task</a> and this site.
 							<i class="fa fa-quote-right"></i>
 						</p>
 					</div>
@@ -470,7 +470,7 @@
 						</div>
 					</li>
 					<li>
-						<h4>Imagemagick</h4>
+						<h4>ImageMagick</h4>
 						<div class="graph-container">
 							<div id="imagick" class="graph-gauge">
 								<span class="familiarity">Familiarity: Intermediate</span>
@@ -597,7 +597,7 @@
 						</div>
 					</li>
 					<li>
-						<h4>Firework</h4>
+						<h4>Fireworks</h4>
 						<div class="graph-container">
 							<div id="firework" class="graph-gauge">
 								<span class="familiarity">Familiarity: Strong</span>
@@ -685,7 +685,6 @@
 				<div class="creation">
 					<a href="http://polligrid.com" target="_blank">
 						<img class="original" src="images/creations/polligrid-edited.png" alt="modishow">
-						<img class="edited" src="images/creations/polligrid-raw.png" alt="modishow">
 						<div class="popup-slides">
 							<h3>PolliGrid</h3>
 						</div>
@@ -694,7 +693,6 @@
 				<div class="creation">
 					<a href="http://masa-chat.jit.su" target="_blank">
 						<img class="original" src="images/creations/chat-edited.png" alt="modishow">
-						<img class="edited" src="images/creations/chat-raw.png" alt="modishow">
 						<div class="popup-slides">
 							<h3>Chatting Room</h3>
 						</div>
@@ -703,7 +701,6 @@
 				<div class="creation">
 					<a href="http://modishow.com" target="_blank">
 						<img class="original" src="images/creations/modishow-edited.png" alt="modishow">
-						<img class="edited" src="images/creations/modishow-raw.png" alt="modishow">
 						<div class="popup-slides">
 							<h3>Modishow</h3>
 						</div>
@@ -712,7 +709,6 @@
 				<div class="creation">
 					<a href="http://zhengdianzhan.com/todolist" target="_blank">
 						<img class="original" src="images/creations/todo-edited.png" alt="modishow">
-						<img class="edited" src="images/creations/todo-raw.png" alt="modishow">
 						<div class="popup-slides">
 							<h3>To Do Task</h3>
 						</div>
@@ -772,13 +768,16 @@
 				<span class="status-time">Dember 2007</span>
 				<ul>
 					<li>
-						Assisted bilingual students prepare for seminars and interviews.
+						helped bilingual students prepare for seminars and interviews.
 					</li>
 					<li>
 						Worked as a English-Japanese translator for the career forum.
 					</li>
 					<li>
-						Joined business meetings with attendees from different countries and made negotiations using my business knowledge and working as a English-Japanese translator.
+						Joined business meetings with attendees from different countries and made negotiations using my business knowledge.
+					</li>
+					<li>
+						Worked as an English-Japanese translator.
 					</li>
 				</ul>
 			</div>
@@ -788,7 +787,7 @@
 				<span class="status-time"> July 2007 - August 2007</span>
 				<ul>
 					<li>
-						Revised the English-written context of the company’s homepage
+						Revised the English-written text of the company’s homepage
 					</li>
 					<li>
 						Analyzed the design of the company-website in terms of marketing, and proposed new design
@@ -832,22 +831,6 @@
 			</div><!-- socialmediaicons -->
 		</section>
 	</div>
-	<!-- <div id="comments">
-		<div id="disqus_thread"></div>
-	</div>
-	<script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'zhengdianzhan'; // required: replace example with your forum shortname
-
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a> -->
 	<footer>
 		<div class="layout">
 			<small class="small">&copy;2014 Zhengdian Zhan</small>
