Images are added

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 			<div class="list-of-creations">
 				<div class="creation">
 					<a href="http://polligrid.com" target="_blank">
-						<img class="original" src="images/creations/polligrid-edited.png" alt="modishow">
+						<img class="original" src="images/creations/polligrid.png" alt="modishow">
 						<div class="popup-slides">
 							<h3>PolliGrid</h3>
 						</div>
@@ -692,7 +692,7 @@
 				</div>
 				<div class="creation">
 					<a href="http://masa-chat.jit.su" target="_blank">
-						<img class="original" src="images/creations/chat-edited.png" alt="modishow">
+						<img class="original" src="images/creations/chat.png" alt="modishow">
 						<div class="popup-slides">
 							<h3>Chatting Room</h3>
 						</div>
@@ -700,7 +700,7 @@
 				</div>
 				<div class="creation">
 					<a href="http://modishow.com" target="_blank">
-						<img class="original" src="images/creations/modishow-edited.png" alt="modishow">
+						<img class="original" src="images/creations/modishow.png" alt="modishow">
 						<div class="popup-slides">
 							<h3>Modishow</h3>
 						</div>
@@ -708,7 +708,7 @@
 				</div>
 				<div class="creation">
 					<a href="http://zhengdianzhan.com/todolist" target="_blank">
-						<img class="original" src="images/creations/todo-edited.png" alt="modishow">
+						<img class="original" src="images/creations/todo.png" alt="modishow">
 						<div class="popup-slides">
 							<h3>To Do Task</h3>
 						</div>
