Image files are removed

--- a/index.html
+++ b/index.html
@@ -682,7 +682,38 @@
 		<section class="layout">
 			<h2>Portfolio</h2>
 			<div class="list-of-creations">
-				
+				<div class="creation">
+					<a href="http://polligrid.com" target="_blank">
+						<img class="original" src="images/creations/polligrid.png" alt="modishow">
+						<div class="popup-slides">
+							<h3>PolliGrid</h3>
+						</div>
+					</a>
+				</div>
+				<div class="creation">
+					<a href="http://masa-chat.jit.su" target="_blank">
+						<img class="original" src="images/creations/chat.png" alt="modishow">
+						<div class="popup-slides">
+							<h3>Chatting Room</h3>
+						</div>
+					</a>
+				</div>
+				<div class="creation">
+					<a href="http://modishow.com" target="_blank">
+						<img class="original" src="images/creations/modishow.png" alt="modishow">
+						<div class="popup-slides">
+							<h3>Modishow</h3>
+						</div>
+					</a>
+				</div>
+				<div class="creation">
+					<a href="http://zhengdianzhan.com/todolist" target="_blank">
+						<img class="original" src="images/creations/todo.png" alt="modishow">
+						<div class="popup-slides">
+							<h3>To Do Task</h3>
+						</div>
+					</a>
+				</div>
 			</div>
 			<div class="additional-button">
 				<a href="https://github.com/masanorinyo" target="_blank"><i class="fa fa-github"></i> Check out my Github</a>
