Creation images are modified

--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 		<section class="layout">
 			<h2>Portfolio</h2>
 			<div class="list-of-creations">
-				<div class="creation">
+				<div class="creation larger">
 					<a href="http://polligrid.com" target="_blank">
 						<img class="original" src="images/creations/polligrid.png" alt="modishow">
 						<div class="popup-slides">
@@ -690,15 +690,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="creation">
-					<a href="http://masa-chat.jit.su" target="_blank">
-						<img class="original" src="images/creations/chat.png" alt="modishow">
-						<div class="popup-slides">
-							<h3>Chatting Room</h3>
-						</div>
-					</a>
-				</div>
-				<div class="creation">
+				<div class="creation larger">
 					<a href="http://modishow.com" target="_blank">
 						<img class="original" src="images/creations/modishow.png" alt="modishow">
 						<div class="popup-slides">
@@ -706,12 +698,21 @@
 						</div>
 					</a>
 				</div>
-				<div class="creation">
+				<div class="creation smaller">
+					<a href="http://masa-chat.jit.su" target="_blank">
+						<img class="original" src="images/creations/chat.png" alt="chatting room">
+						<span class="popup-slides">
+							<h3>Chatting Room</h3>
+						</span>
+					</a>
+				</div>
+				
+				<div class="creation smaller">
 					<a href="http://zhengdianzhan.com/todolist" target="_blank">
-						<img class="original" src="images/creations/todo.png" alt="modishow">
-						<div class="popup-slides">
+						<img class="original" src="images/creations/todo.png" alt="To do task">
+						<span class="popup-slides">
 							<h3>To Do Task</h3>
-						</div>
+						</span>
 					</a>
 				</div>
 			</div>
