Name of images are changed

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 			<div class="list-of-creations">
 				<div class="creation larger">
 					<a href="http://polligrid.com" target="_blank">
-						<img class="original" src="http://zhengdianzhan.com/images/creations/polligrid.png" alt="modishow">
+						<img class="original" src="images/creations/polligrid.png" alt="modishow">
 						<div class="popup-slides">
 							<h3>PolliGrid</h3>
 						</div>
@@ -692,7 +692,7 @@
 				</div>
 				<div class="creation larger">
 					<a href="http://modishow.com" target="_blank">
-						<img class="original" src="http://zhengdianzhan.com/images/creations/modishow.png" alt="modishow">
+						<img class="original" src="images/creations/modishow.png" alt="modishow">
 						<div class="popup-slides">
 							<h3>Modishow</h3>
 						</div>
@@ -700,7 +700,7 @@
 				</div>
 				<div class="creation smaller">
 					<a href="http://masa-chat.jit.su" target="_blank">
-						<img class="original" src="http://zhengdianzhan.com/images/creations/chat.png" alt="chatting room">
+						<img class="original" src="images/creations/chat.png" alt="chatting room">
 						<span class="popup-slides">
 							<h3>Chatting Room</h3>
 						</span>
@@ -709,7 +709,7 @@
 				
 				<div class="creation smaller">
 					<a href="http://zhengdianzhan.com/todolist" target="_blank">
-						<img class="original" src="http://zhengdianzhan.com/images/creations/todo.png" alt="To do task">
+						<img class="original" src="images/creations/todo.png" alt="To do task">
 						<span class="popup-slides">
 							<h3>To Do Task</h3>
 						</span>
