Yeoman is added to the skill set

--- a/index.html
+++ b/index.html
@@ -554,6 +554,21 @@
 						</div>
 					</li>
 					<li>
+						<h4>Yeoman</h4>
+						<div class="graph-container">
+							<div id="yeoman" class="graph-gauge">
+								<span class="familiarity">Familiarity: Intermediate</span>
+							</div>
+						</div>
+						<div class="hidden-description">
+							<p>
+								<span class="sub-title">Websites created with the technology:</span>
+								<a class="block-attr" href="http://zhengdianzhan.com/todolist" target="_blank" rel="">To Do Task
+								</a>
+							</p>
+						</div>
+					</li>
+					<li>
 						<h4>JasmineJS</h4>
 						<div class="graph-container">
 							<div id="jasmine" class="graph-gauge">
