creation 'Modishow' was changed to 'ModiShow'

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
 					<a href="http://modishow.com" target="_blank">
 						<img class="original" src="images/creations/modishow.png" alt="modishow">
 						<div class="popup-slides">
-							<h3>Modishow</h3>
+							<h3>ModiShow</h3>
 						</div>
 					</a>
 				</div>
