Github link is directed to repository now

--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
 				</div>
 			</div>
 			<div class="additional-button">
-				<a href="https://github.com/masanorinyo" target="_blank"><i class="fa fa-github"></i> Check out my Github</a>
+				<a href="https://github.com/masanorinyo?tab=repositories" target="_blank"><i class="fa fa-github"></i> Check out my Github</a>
 			</div>
 		</section>
 	</div>
